--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div class="search-container">
         <input type="text" id="searchBar" onkeyup="searchgames()" placeholder="Search for some games I guess">
     </div>
-   <a href="https://bendover1112223334442.github.io" target="_blank" >
-        <div class="game-link-other">To bendover1112223334442</div>
+   <a href="https://github.com/Nintendoboi222/nintendoboi222.github.io" target="_blank" >
+        <div class="game-link-other">to OG github </div>
     </a>
     <div class="game-grid">
        <a href="https://bendover111222333444.github.io/games/awesome-tanks-2" target="_blank">
