--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
             <span class="game-title">Craft Mine</span>
         </div>
     </a>
+    <a href="https://bendover111222333444.github.io/games/crazy-cattle-3d" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Crazy Cattle 3D</span>
+        </div>
+    </a>
     <a href="https://bendover111222333444.github.io/games/crossy-road" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
