--- a/index.html
+++ b/index.html
@@ -291,10 +291,28 @@
             <span class="game-title">Five Nights at Freddys 3</span>
         </div>
     </a>
+    <a href="https://bendover111222333444.github.io/games/FNAF-4" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Five Nights at Freddys 4</span>
+        </div>
+    </a>
     <a href="https://bendover111222333444.github.io/games/FNAF-UCN" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
-            <span class="game-title">FNAF Ultimate Custom Night</span>
+            <span class="game-title">Five Nights at Freddys UCN</span>
+        </div>
+    </a>
+    <a href="https://bendover111222333444.github.io/games/FNAF-World" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Five Nights at Freddys World</span>
+        </div>
+    </a>
+   <a href="https://bendover111222333444.github.io/games/FNAF-PS" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Five Nights at Freddys Pizza Sim</span>
         </div>
     </a>
     <a href="https://bendover111222333444.github.io/games/flappy-birb" target="_blank">
