--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <a href="https://bendover111222333444.github.io/games/eaglercraft1.8" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
-            <span class="game-title">Eagler Craft 1.8 (more stable)/span>
+            <span class="game-title">Eagler Craft 1.8 (more stable)</span>
         </div>
     </a>
     <a href="https://bendover111222333444.github.io/games/eaglercraft1.12" target="_blank">
