--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
             <span class="game-title">"Dune"</span>
         </div>
     </a>
-          <a href="https://bendover111222333444.github.io/games/eaglercraft1.8" target="_blank">
+          <a href="https://bendover111222333444.github.io/games/eaglercraft-1-8" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
             <span class="game-title">Eagler Craft 1.8 (more stable)</span>
         </div>
     </a>
-    <a href="https://bendover111222333444.github.io/games/eaglercraft1.12" target="_blank">
+    <a href="https://bendover111222333444.github.io/games/eaglercraft-1-1-2" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
             <span class="game-title">Eagler Craft 1.12</span>
