--- a/index.html
+++ b/index.html
@@ -513,6 +513,12 @@
             <span class="game-title">OVO</span>
         </div>
     </a>
+    <a href="https://bendover111222333444.github.io/games/plants-vs-zombies" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Plants vs Zombies</span>
+        </div>
+    </a>
     <a href="https://bendover111222333444.github.io/games/pandemic-2" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
