updating site links

--- a/index.html
+++ b/index.html
@@ -291,6 +291,12 @@
             <span class="game-title">Evil Glitch</span>
         </div>
     </a>
+    <a href="https://bendover111222333444.github.io/games/FNAF-1" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Five Nights at Freddys 1</span>
+        </div>
+    </a>
     <a href="https://bendover111222333444.github.io/games/FNAF-2" target="_blank">
         <div class="game-link">
             <span class="pin-button"> </span>
@@ -511,6 +517,12 @@
         <div class="game-link">
             <span class="pin-button"> </span>
             <span class="game-title">OVO</span>
+        </div>
+    </a>
+    <a href="https://bendover111222333444.github.io/games/funny-plane-game" target="_blank">
+        <div class="game-link">
+            <span class="pin-button"> </span>
+            <span class="game-title">Flappy bird (September edition)</span>
         </div>
     </a>
     <a href="https://bendover111222333444.github.io/games/plants-vs-zombies" target="_blank">
