--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fgithub.com%2Fbendover111222333444%2Fbendover111222333444.github.io&count_bg=%23AD00FF&title_bg=%23555555&icon=github.svg&icon_color=%23AD00FF&title=Total+Visits&edge_flat=false"/>
     </a>
   </div>
-    <h1>Welcome</h1>
+    <h1>Welcome (I added new games 😊)</h1>
     <h2>You've been here for <span id="time-counter"></span></h2>
     <strong>
         <div class="Index-Container">
